Change font to charter

--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -1,10 +1,15 @@
 @charset "utf-8";
 
+@font-face {
+	font-family: "charter";
+	src: url("../fonts/charter.woff") format("woff");
+}
+
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Segoe UI Symbol", "Segoe UI Emoji", "Apple Color Emoji", Roboto, Helvetica, Arial, sans-serif !default;
+$base-font-family: Charter, serif;
 $code-font-family: "Menlo", "Inconsolata", "Consolas", "Roboto Mono", "Ubuntu Mono", "Liberation Mono", "Courier New", monospace;
-$base-font-size:   16px !default;
+$base-font-size:   1.2rem !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
@@ -14,7 +19,7 @@ $spacing-unit:     30px !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    60em !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
